Major content patch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde_json = {version = "1.0.91"}
 serde_derive = {version = "1.0.151"}
 simple_logger = {version = "4.0.0"}
 log = {version = "0.4.17"}
+timer = {version = "0.2.0"}
+chrono = {version = "0.4.23"}
