--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.17.0", features = ["full"] }
-warp = {version = "0.3.2"}
+warp = {version = "0.3.2", features = ["tls"]}
 rand = {version = "0.5.0"}
 handlebars = {version = "4.3.5"}
 serde = {version = "1.0.151"}
